crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__inspector__inspector_foreign_keys_tab_marks_unresolved_reference.snap
---
source: crates/sabiql/src/tests/render_snapshots/inspector.rs
assertion_line: 342
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Name                   Columns         References                             On update   On delete                       │
│  public.comments                      ││fk_users_department    department_id   public.departments(id)                 NO ACTION   CASCADE                         │
│                                       ││fk_users_missing_org   org_id          public.missing_orgs(id) (unresolved)   NO ACTION   NO ACTION                       │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                                       │┌ [3] Result ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table to preview)                                                                                               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  c:Connections  ^P:Tables  ^O:History  ^R:Read-Only  f:Focus  [/]:InsTabs  ?:Help  F1:Palette  ,:Settings  q:Quit
