crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__inspector__inspector_indexes_tab_for_sqlite_hides_unknown_type.snap
---
source: crates/sabiql/src/tests/render_snapshots/inspector.rs
assertion_line: 180
expression: output
---
test_project ▸ test_db ▸ -                                                                                                                         connected | app.db
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [Trig] [DDL]
│> users                                │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  posts                                ││Name              Columns   Unique                                                                                        │
│  comments                             ││users_pkey        id        ✓                                                                                             │
│                                       ││idx_users_email   email     ✓                                                                                             │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                                       │┌ [3] Result ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table to preview)                                                                                               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
r:Reload  s:SQL  ^⇧D:Diagnostics  c:Connections  ^P:Tables  ^O:History  ^R:Read-Only  f:Focus  [/]:InsTabs  ?:Help  F1:Palette  ,:Settings  q:Quit
